# narna

./: .gitignore  LICENSE  MVP.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cloud-ci.yml  publish-pypi.yml
docs/: ADAPTERS-E2E.md  BORROW-THE-WAVE.md  BRAND.md  BUSINESS-MODEL.md  DEPLOYMENT.md  DIFFERENTIATION.md  FOUNDATION.md  INSTALL.md  MVP-CHECKLIST.md  PADDLE-SETUP.md  POSITIONING.md  PROD-ROADMAP.md  REGISTRY-PROD.md  SELF-HOST.md  SHIP-LOG.md  STRATEGY.md  WEB-BIZ-MVP.md
docs/ship-log/: 2026-07-20.md  README.md  _template.md
examples/: e2e_mcp.py  e2e_openai.py  e2e_otel.py
examples/_demo_mcp/: constitution.yaml
examples/_demo_openai/: constitution.yaml
examples/_demo_otel/: constitution.yaml
ops/: README.md
plugins/: README.md
plugins/TEMPLATE/: narna-plugin.yaml
plugins/narna-moltbook/: narna-plugin.yaml
plugins/narna-slack/: narna-plugin.yaml
policies/: local-default.yaml  trading-default.yaml
rfcs/: README.md  RFC-0001-agent-identity.md  RFC-0002-permission-manifest.md  RFC-0003-agent-passport.md  RFC-0004-narna-score.md  RFC-0005-narna-yaml-manifest.md  RFC-0006-adapter-catalog.md  RFC-0007-governance-package.md  RFC-0008-constitution-runtime.md  RFC-0009-constitution-compatibility.md  RFC-0010-ugs-rename.md  RFC-0011-governance-session-execution-graph.md
rfcs/ngs/: NGS-0001-ai-identity.md  NGS-0002-capability.md  NGS-0003-permission.md  NGS-0004-policy.md  NGS-0005-evidence.md  NGS-0006-trust-score.md  NGS-0007-passport.md  NGS-0008-governance-package.md  NGS-0009-certification.md  NGS-0010-audit-report.md  NGS-0011-manifest.md  NGS-0012-registry.md  NGS-0013-governance-api.md  README.md
sdk/ts/: package.json  tsconfig.json
sdks/go/: README.md  go.mod  narna.go  narna_test.go
sdks/typescript/: README.md  package-lock.json  package.json
specs/: ARCHITECTURE.md  README.md  RELEASE-v0.1.md
specs/audit/: SPEC.md
specs/capability/: SPEC.md
specs/certification/: SPEC.md
specs/compatibility/: SPEC.md
specs/constitution/: SPEC.md
specs/constitution-runtime/: SPEC.md
specs/examples/: constitution.yaml  evidence-api-response.json  fleet.yaml  narna-governance-binding.yaml  narna.yaml  policy-decision-ask.json  policy-pack-local-default.yaml  tool-coinbase-spot.json  trading-agent.yaml  trust-score.json  universal-identity.json
specs/execution-graph/: SPEC.md
specs/execution-unit/: SPEC.md
specs/governance/: SPEC.md
specs/governance-api/: SPEC.md  openapi.yaml
specs/governance-package/: SPEC.md
specs/governance-session/: SPEC.md
specs/governance-telemetry/: SPEC.md
specs/governor/: SPEC.md
specs/identity/: SPEC.md
specs/manifest/: SPEC.md
specs/metering/: SPEC.md
specs/narna-score/: SPEC.md
specs/passport/: SPEC.md
specs/permission/: SPEC.md
specs/policy/: SPEC.md
specs/registry/: SPEC.md
specs/schemas/: README.md  audit.schema.json  budget.schema.json  certification.schema.json  constitution.schema.json  event.schema.json  evidence.schema.json  execution-unit.schema.json  governance-package.schema.json  governance-telemetry.schema.json  manifest.schema.json  passport.schema.json  universal-identity.schema.json
specs/uap-core/: SPEC.md
specs/uap-evidence/: SPEC.md
specs/uap-execution/: SPEC.md
specs/vap/: SPEC.md
templates/: narna.yaml
tests/: test_adapter_enforce.py  test_cloud.py  test_conformance.py  test_constitution.py  test_deepen.py  test_gaps_gu.py  test_governance_runtime.py  test_governor.py  test_manifest_wrap.py  test_moat_ship.py  test_moltbook.py  test_mvp.py  test_ngs.py  test_p1_p3.py  test_phase1_dx.py  test_phase2_vap.py  test_phase3_registry.py  test_phase4_certification.py  test_smoke.py  test_telemetry.py  test_universal_identity.py  test_vap.py
web/: README.md  docker-compose.yml
(+157 files in other folders)
