[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narna"
version = "0.1.0"
description = "NARNA — Universal AI Governance Runtime (Identity, Governance, Trust, UGS)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NARNA Contributors" }]
keywords = ["ai-agents", "runtime", "trust", "uap", "vap", "narna"]
dependencies = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.23.0",
  "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/hanyangkai/narna"
Documentation = "https://github.com/hanyangkai/narna#readme"
Repository = "https://github.com/hanyangkai/narna"

[project.scripts]
narna = "narna.cli:main"
uap = "uap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/narna", "src/uap", "src/uap_cloud"]

[tool.hatch.build.targets.wheel.force-include]
"specs/schemas" = "uap/_spec_schemas"
"policies" = "uap/_policies"
