[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "narna"
version = "0.1.0"
description = "NARNA — Governance Infrastructure for Agentic AI (UGS reference runtime)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NARNA Contributors" }]
keywords = ["ai-agents", "agentic-ai", "governance", "runtime", "trust", "uap", "ugs", "narna"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "PyYAML>=6.0.1",
  "jsonschema>=4.23.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = ["jsonschema>=4.23.0", "build>=1.0.0"]
cloud = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.10.0",
  "python-multipart>=0.0.12",
  "PyYAML>=6.0.1",
]

[project.urls]
Homepage = "https://narna.org"
Documentation = "https://narna.org/docs"
Repository = "https://github.com/hanyangkai/narna"

[project.scripts]
narna = "narna.cli:main"
uap = "uap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/narna", "src/uap", "src/uap_cloud"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/policies",
  "/specs",
  "/README.md",
  "/pyproject.toml",
]
